When placing a float, pay attention to its final logical top.

Subsequent floats may not be placed above this location.

BUG=665804

Review-Url: https://codereview.chromium.org/2504173002
Cr-Commit-Position: refs/heads/master@{#432503}

Former-commit-id: e92bd951db144e36d9235557a01d18703c2755ce